# ZetaWatchQt

./: .gitmodules  CMakeLists.txt  README.md
media/: ZetaIcon.qrc
src/: FormatHelpers.cpp  FormatHelpers.hpp  MenuGenerator.cpp  MenuGenerator.hpp  main.cpp
